# libremaps

./: CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md
migrations/2021-02-24-154411_create_markers/: up.sql
migrations/2021-02-27-161015_create_markers/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  markers.rs  models.rs  mw_api.rs  schema.rs
src/routes/: markers.rs  mod.rs
