[package]
name = "libremaps"
version = "0.0.1"
authors = ["nessun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features=["openssl"] }
anyhow = "1.0"
openssl = "0.10.29"
actix-cors = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
jsonapi = "*"
rand = "0.8.3"
scraper = "0.12.0"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.15.0"
